feat: 주문 생성 작업 진행 및 테스트
- 추가 테스트 필요